# is-thirteen

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  lib_test.rs  main.rs  thirteen_strings.rs
