[package]
name = "is-thirteen"
version = "0.0.13"
edition = "2018"
description = "Comparing variables to thirteen has never been easier with this crate."
license = "MIT"

[dependencies]
phf = { version = "0.9", features = ["macros"] }
fnv = "1.0"
once_cell = "1.8"

[dev-dependencies]
rstest = "0.10"
chrono = "0.4"