[package]
name = "is-thirteen"
version = "0.0.13"
edition = "2018"
description = "Did you consider the fact that \"Jodie Whittaker\" represents the number 13 in some cultures? No you didn't. That's why you need this crate."
license = "WTFPL"
documentation = "https://docs.rs/is-thirteen/"
repository = "https://github.com/MakotoE/is-thirteen"
readme = "README.md"

[dependencies]
phf = { version = "0.9", features = ["macros"] }
fnv = "1.0"
once_cell = "1.8"
num-traits = "0.2"

[dev-dependencies]
rstest = "0.10"
chrono = "0.4"

[[bin]]
name = "is-thirteen"